# sift

./: .gitignore  CMakeLists.txt  cv.c  header.h  img.c  main.c  sift.c  type.h
